fix overflow in code blocks

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -52,8 +52,8 @@ d-appendix {
   padding-bottom: 0px !important;
 }
 
-/* in the case of super long code lines, restrict their width and make them scrollable */
-/*d-code {
-  width: 120%;
-  overflow: scroll;
-}*/
+/* make code sections scroll rather than overflow, and give them a grey background */
+d-code {
+  overflow-x: auto;
+  background: #f8f8f8;
+}
